# EleCho.TermGPT

./: .gitmodules  CMakeLists.txt  README.md  config.ini
src/: common.hpp  config.cpp  config.hpp  event.hpp  main.cpp  terminal.cpp  terminal.hpp
src/colorize/: color.hpp  elements.cpp  elements.h
src/openai/: connection.cpp  connection.h  openaiapi.cpp  openaiapi.h  route.h  threadsafedeque.hpp
src/openai/apis/: chat_completion.hpp  models.hpp
src/openai/program/: chat_completion.hpp  error.h
